--- a/views/partials/home/table.ejs
+++ b/views/partials/home/table.ejs
@@ -2,14 +2,16 @@
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">Item</th>
+        <th scope="col" >Item</th>
         <th scope="col">Price</th>
         <th scope="col">Quantity</th>
         <th scope="col">Amount</th>
       </tr>
     </thead>
+
+  <form action="/" method="post">
     <tbody>
-      <% for(let i = 0; i < 5; i++) { %>   
+      <% for(let i = 0; i < 20; i++) { %> 
       <tr>
         <td>
             <input class="form-control" type="text" name="item" id="item" readonly>
@@ -29,11 +31,24 @@
     <tfoot>
         <tr>
             <td></td>
-            <td></td>
+            <td>
+              <input type="number" name="invoiceId" id="invoiceId"
+                     value=<%=invoiceId%> hidden>
+            </td>
             <td>Total:</td>
             <td>
                 <input class="form-control" type="number" name="total" id="total" readonly>
             </td>
         </tr>
+        <tr>
+          <td></td>
+          <td>
+            <input type="submit" value="Purchase">
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
     </tfoot>
+  </form>
   </table>
+  
