Add printing features

--- a/views/partials/home/table.ejs
+++ b/views/partials/home/table.ejs
@@ -1,5 +1,7 @@
 
-<table class="table">
+<p>INV<%=invoiceId%></p>
+<p ></p> 
+<table class="table mt-3">
     <thead>
       <tr>
         <th scope="col" >Item</th>
