--- a/views/invoices/home.ejs
+++ b/views/invoices/home.ejs
@@ -4,10 +4,10 @@
         <div class="container">
             <%- include('../partials/home/sidebar') %> 
         </div>
-        <div class="container mt-3 mbe-2">
+        <div class="container mbe-2">
             <%- include('../partials/home/table') %> 
         </div>
-        <div class="container mt-3">
+        <div class="container">
             <%- include('../partials/home/search') %> 
         </div>
     </div>
