--- a/views/partials/home/sidebar.ejs
+++ b/views/partials/home/sidebar.ejs
@@ -1,9 +1,9 @@
 
 <nav class="nav flex-column mt-3">
-    <a class="nav-link active"href="#">
-        Create Customers
+    <a class="nav-link active"href="/reports/cashReports">
+        Cash Reports
     </a>
     <a class="nav-link active" href="#">
-        Purchase on credit
+        Daily Sales
     </a>
 </nav>
