--- a/views/partials/home/table.ejs
+++ b/views/partials/home/table.ejs
@@ -1,7 +1,7 @@
 
 <p>INV<%=invoiceId%></p>
 <p ></p> 
-<table class="table">
+<table class="table table-sm">
     <thead>
       <tr>
         <th scope="col" >Item</th>
